# AI_NK

./: .dockerignore  .env  .env.development  .env.example  .env.production  .env.testing  .gitignore  .pre-commit-config.yaml  CONTENT_BASED_ID_FIX_COMPLETE.md  DOCUMENT_ID_FIX_COMPLETE.md  Dockerfile  FINAL_CI_CD_STATUS.md  FINAL_STATUS_REPORT.md  FIX_INSTRUCTIONS.md  HUONG_DAN_SCRIPTS.md  LANGCHAIN_DEPRECATION_FIX.md  RAG_IMPROVEMENTS_COMPLETE.md  README.md  README_MODEL_HOTSWAP.md  README_UPDATE.md  ai_nvcb_utility.py  check_databases.py  check_tables.py  clear_session_state.py  copy_env.py  debug_chat_history.py  debug_response.py  deploy.bat  deploy.sh  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  enhanced_chat_history.py  fix_backend.py  fix_chat_history.py  fixed_doc_analysis.py  monitor.py  nginx.conf  one_click_setup.py  pyproject.toml  (+42 more)
.github/workflows/: ci.yml
backend/: __init__.py  debug_server.py  run_server.py  server.py
backend/api/: __init__.py  cleanup_routes.py  document_routes.py  health_routes.py  main.py  model_routes.py  simple_model_routes.py  slide_routes.py
backend/document_analysis/: RAG_DOCUMENTATION.md  config.py  document_routes.py  document_service.py  document_service_fixed.py  model_management_content.txt  test_system_prompt.py
backend/model_management/: __init__.py  config.py  global_model_config.py  model_manager.py  system_prompt_config.json  system_prompt_manager.py
backend/slide_generation/: config.py  pptx_generator.py  pptx_generator.py.bak  slide_service.py  slide_service.py.backup
benchmarks/: README.md  health_uptime_probe.py  hot_swap_eval.py  image_size_eval.bat  json_parse_eval.py  rag_eval.py
data/: rag_eval_sample.jsonl
docs/: CHUONG_1_GIOI_THIEU_DE_TAI.md  CHUONG_1_GIOI_THIEU_DE_TAI.tex  CHUONG_2_KHAO_SAT_PHAN_TICH_YEU_CAU.md  CHUONG_2_KHAO_SAT_PHAN_TICH_YEU_CAU.tex  CHUONG_3_CONG_NGHE_SU_DUNG.md  CHUONG_3_CONG_NGHE_SU_DUNG.tex  CHUONG_4_THIET_KE_TRIEN_KHAI.md  CHUONG_4_THIET_KE_TRIEN_KHAI.tex  CHUONG_5_GIAI_PHAP_DONG_GOP.md  CHUONG_5_GIAI_PHAP_DONG_GOP.tex  CHUONG_6_KET_LUAN_HUONG_PHAT_TRIEN.md  CHUONG_6_KET_LUAN_HUONG_PHAT_TRIEN.tex  ENVIRONMENT_VARIABLES.md  PHU_LUC_C.tex  SYSTEM_PROMPT.md  lib.bib  sources.xml  system_prompt_examples.md  system_prompt_guide.md
docs/deployment/: README.md
docs/deployment/k8s/: ai-nvcb-deployment.yaml
frontend/: app.py  app_new.py  app_old.py  style.css
frontend/components/: __init__.py  conversation_simple.py  sidebar.py  system_prompt.py
frontend/pages/: document_analysis.py  document_analysis.py.bak7  document_analysis_fixed.py  model_management.py  model_management.py.new  quiz_generation.py  slide_generation.py  slide_generation.py.new
frontend/utils/: quiz_filters.py
k8s/: ai-nvcb-deployment.yaml
migrations/: __init__.py  database_migrator.py  database_seeder.py  migration_manager.py
output/slides/: mua_nom_ha_noi_20250306_154955.json  mua_nom_ha_noi_20250306_154955.pptx  phong_tranh_soc_nhiet_20250306_155718.json  phong_tranh_soc_nhiet_20250306_155718.pptx  phong_tranh_soc_nhiet_20250306_155942.json  phong_tranh_soc_nhiet_20250306_155942.pptx
reference/: consts.py
storage/: .last_vacuum  database.sqlite
tests/: __init__.py  conftest.py  test_backend.py  test_e2e.py  test_integration.py  test_utils.py
tools/: generate_chuong4_template_tex.py
utils/: backup_manager.py  cleanup.py  database.py  environment.py  health_check.py  logging_config.py  performance.py  production_logging.py  repository.py  security.py  ssl_manager.py
